# discord-bot-template

./: LICENSE  README.md  discord_bot.py  makefile  pyproject.toml
