[tool.poetry]
name = "discordbot-template"
version = "0.0.1"
description = "Template for a discord bot. Responds to everything with 'Sup Elon Musk'"
authors = ["chadexplains"]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
"discord.py" = "^2.0"
"python-dotenv" = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
